[package]
name = "testt"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros"] }
futures = "0.3"
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.38"
rand = "0.8.5"
blake3 = { version = "1.5.5", features = ["digest", "rayon"] }
tracing = { version = "0.1.41", features = ["log"] }
