[package]
name = "testt"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde"] }
futures = "0.3"
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.38"
rand = "0.8.5"
blake3 = { version = "1.5.5", features = ["digest", "rayon"] }
tracing = { version = "0.1.41", features = ["log"] }
thiserror = "2.0.4"
arrayvec = "0.7.6"
serde = { version = "1.0.215", features = ["derive"] }
either = "1.13.0"
serde_json = "1.0.133"
